test_suite/tests/ui/unknown-attribute/variant.stderr
error: unknown serde variant attribute `abc`
 --> $DIR/tests/ui/unknown-attribute/variant.rs:5:13
  |
5 |     #[serde(abc = "xyz")]
  |             ^^^
